--- a/test/database.yml
+++ b/test/database.yml
@@ -1,6 +1,3 @@
 sqlite:
-  :adapter: sqlite
-  :dbfile: datadumper.sqlite.db
-sqlite3:
-  :adapter: sqlite3
-  :dbfile: datadumper.sqlite3.db
+  adapter: sqlite3
+  dbfile: datadumper.sqlite3.db
